# super-pong

./: Cargo.toml  README.md  build  debug
assets/: config.toml
sound-files/: box.aup3  critical.aup3-wal  target-hit.aup3
src/: main.rs
src/game/: console.rs  game_loop.rs  main_menu.rs  mod.rs  sounds.rs
src/game/stages/: mod.rs  part_one.rs
src/objects/: button.rs  fade.rs  framerate_counter.rs  mod.rs  paddle.rs  settings.rs
src/objects/enemies/: mod.rs  target.rs
src/objects/particles/: mod.rs
src/objects/projectiles/: mod.rs
texture-files/: logo.xcf
texture-files/background/: background1.xcf  sun-moon.xcf  sun.xcf  tutorial.xcf
texture-files/objects/paddle/: default.xcf
texture-files/particles/: explosion.xcf
texture-files/title-screen/: animated-birds.xcf  birds.xcf  bottom-backdrop.xcf  button.xcf  rainbow.xcf  sky.xcf  test.xcf  title.xcf
texture-files/ui/: back.xcf  settings.xcf  tick.xcf
