[package]
name = "super-pong"
version = "0.1.0"
edition = "2021"
authors = [ "Let" ]
description = "Bullet hell pong with an aberrating theme"
readme = "README.md"
repository = "https://github.com/Letronix624/super-pong"
keywords = [ "game", "pong", "horror" ]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"

  [dependencies.let-engine]
  path = "../let-engine/engine"
  # default_features = false
  features = [ "asset_system" ] #, "client" ]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
