[package]
name = "super-pong"
version = "0.1.0"
edition = "2021"
authors = [ "Let" ]
description = "Bullet hell pong with an aberrating theme"
readme = "README.md"
repository = "https://github.com/Letronix624/super-pong"
keywords = [ "game", "pong", "horror" ]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
directories = "5.0.1"
native-dialog = "0.7.0"
once_cell = "1.19.0"
rand = "0.8.5"
ron = "0.8.1"

  [dependencies.serde]
  version = "1.0.197"
  features = [ "derive" ]

  [dependencies.let-engine]
  path = "../let-engine/engine"
  features = [ "asset_system", "egui", "serde", "rand", "fast-math" ]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
